--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/StandardLibraryImporter.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/StandardLibraryImporter.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.dev.StandardLibraryImporter"
+﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.dev.ui.StandardLibraryImporter"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Height="340" Width="344" WindowStyle="SingleBorderWindow" Background="#FFD4D0C8" ShowInTaskbar="True" ResizeMode="NoResize" Title="Standard Core Component Library Importer" FontSize="11">
