--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/UpccModelCreator.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/UpccModelCreator.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.dev.UpccModelCreator"
+﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.dev.ui.UpccModelCreator"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Height="610" Width="450" WindowStyle="SingleBorderWindow" Background="#FFD4D0C8" ShowInTaskbar="True" ResizeMode="NoResize" Title="Default UPCC Model Creator" FontSize="11">
